# zhufeng-robotic-arm

./: .gitignore  README.md  motor_map.md  sukinee_gravity_assist_config.json  sukinee_inertia_correction.json
docs/: eye_in_hand_execution_framework.md  代码注释规范.md
machine/: README.md
sukinee_ws/: .gitignore  sukinee_gravity_assist_config.json  sukinee_motor_to_urdf_offsets.json
sukinee_ws/src/sukinee_urdf/: CMakeLists.txt  package.xml
sukinee_ws/src/sukinee_urdf/config/: sukinee_gz_effort_controllers.yaml
sukinee_ws/src/sukinee_urdf/launch/: gz_gravity_comp_test.launch.py  zero_drag_rviz.launch.py
sukinee_ws/src/sukinee_urdf/meshes/urdf_camera_gripper/: Link1.STL  Link2.STL  Link8.STL  Link_l.STL  base_link.STL
sukinee_ws/src/sukinee_urdf/rviz/: display.rviz
sukinee_ws/src/sukinee_urdf/scripts/: gz_gravity_comp_node.py
sukinee_ws/src/sukinee_urdf/scripts/analysis_tools/: sukinee_gravity_preview.py  sukinee_rviz_gravity_monitor.py
sukinee_ws/src/sukinee_urdf/scripts/vision_calibration/: sukinee_optimize_zero_offsets_tooltag_base_ref.py  sukinee_serial_tag_pose_receiver.py
sukinee_ws/src/sukinee_urdf/scripts/zero_drag/: sukinee_socketcan_driver.py  sukinee_socketcan_read_rate_test.py  sukinee_zero_torque_gravity_mode_socketcan.py
sukinee_ws/src/sukinee_urdf/scripts/zero_drag_tools/: calibrate_motor_to_urdf_offsets.py  read_all_motors_monitor.py  sukinee_real_feedback_joint_state_publisher.py  sukinee_type1_torque_sign_probe.py
sukinee_ws/src/sukinee_urdf/urdf/: sukinee_urdf.csv  sukinee_urdf.urdf  sukinee_urdf.urdf.xacro
vision/: .gitignore  (+5 more)
(+268 files in other folders)
